<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lobby">

    <Button
        android:id="@+id/lobby_switch_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="52dp"
        android:text="@string/switch_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_room_2_section" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/game_room_1_section"
        android:layout_width="352dp"
        android:layout_height="237dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="35dp"
        android:background="#B2E7ED"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/game_room_1_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="147dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="147dp"
            android:text="@string/game_room_1"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/game_room_1_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="147dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="147dp"
            android:text="@string/status_available"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_room_1_cp" />

        <TextView
            android:id="@+id/game_room_1_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="147dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="147dp"
            android:text="@string/game_shut_the_box"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_room_1_title" />

        <TextView
            android:id="@+id/game_room_1_cp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="147dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="147dp"
            android:text="@string/current_players_0"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_room_1_name" />

        <Button
            android:id="@+id/join_room_1_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="15dp"
            android:text="@string/join_room"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/game_room_2_section"
        android:layout_width="352dp"
        android:layout_height="237dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:background="#8BC34A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_room_1_section">

        <TextView
            android:id="@+id/game_room_2_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="147dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="147dp"
            android:text="@string/status_available"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_room_2_cp" />

        <TextView
            android:id="@+id/game_room_2_cp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="147dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="147dp"
            android:text="@string/current_players_0"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_room_2_name" />

        <TextView
            android:id="@+id/game_room_2_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="147dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="147dp"
            android:text="@string/game_shut_the_box"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_room_2_title" />

        <TextView
            android:id="@+id/game_room_2_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="147dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="147dp"
            android:text="@string/game_room_2"
            android:textColor="#000000"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/join_room_2_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="15dp"
            android:text="@string/join_room"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/test_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginBottom="63dp"
        android:text="@string/add_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>